# repo-qa

./: README.md  pyproject.toml
repo_qa/: __init__.py  cli.py  config.py  indexer.py  qa.py
