[project]
name = "repo-qa"
version = "0.1.0"
description = "Ask questions about a local git repo using LangChain + Claude."
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "faiss-cpu>=1.8",
    "fastembed>=0.3",
    "python-dotenv>=1.0",
]

[project.scripts]
repo-qa = "repo_qa.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["repo_qa*"]
